--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     db:
         image: mysql
         container_name: mysql-server
+              
         volumes:
             - ./mysql/mysql-data:/var/lib/mysql
         environment:
@@ -20,7 +21,7 @@ services:
     web:
         build:
             context: ./web
-            dockerfile: ./Dockerfile-dev
+            dockerfile: Dockerfile-dev
         container_name: web
         ports:
             - 8080:80
