--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ after_success:
   - docker build -t $DOCKER_USERNAME/$REPO:${TRAVIS_COMMIT::7} -f web/Dockerfile-dev  web/
   - docker push $DOCKER_USERNAME/$REPO:${TRAVIS_COMMIT::7}
   #도커 허브 로그인
-  #아이디는 travis CI 홈페이지에 미리 넣어준다.
+  #아이디는 travis CI 홈페이지에 미리 넣어준다
   #빌드된 이미지들을 도커 허브에 push
